# mfsb

./: Cargo.toml  identifier.sqlite  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build.yml
migrations/: V1__base.sql
src/: lib.rs  main.rs  metrics.rs  path_walk.rs  pipeline.rs  workspace.rs
src/chunk/: cdchunking.rs  fastcdc.rs  fastcdc_2020_mmap.rs  hash_roll.rs  hash_roll_mem.rs  hash_roll_mmap.rs  mod.rs  rabin.rs  rabin_mem.rs  rabin_mmap.rs  zpaq.rs
src/compress/: brotli.rs  bzip2.rs  deflate.rs  gzip.rs  lz4.rs  lzma.rs  mod.rs  snappy.rs  zlib.rs  zstd.rs
src/db/: folders_db.rs  mod.rs  workspace_db.rs
src/ecc/: mod.rs  secded.rs
src/encrypt/: chacha20poly1305_rustcrypto.rs  mod.rs  ring.rs  ring_crypto.rs  rust_crypto.rs
src/hash/: blake3.rs  digest.rs  mod.rs
src/pack/: builder.rs  location.rs  mod.rs
src/pipeline/: mod.rs  monitor.rs
src/snapshot/: builder.rs
