[package]
name = "mfsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argon2 = { version = "0.5.0", features = ["std"] }
blake3 = "1.3.3"
brotlic = "0.8.1"
bzip2 = "0.4.4"
cdc = "0.1.1"
cdchunking = "1.0.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
fastcdc = "3.0.1"
flume = "0.10.14"
generic-array = "0.14.6"
hash-roll = "0.3.0"
keyring = "2.0.1"
lazy_static = "1.4.0"
libdeflater = "0.12.0"
lz4_flex = { version = "0.10.0", default-features = false, features = ["checked-decode"] }
memmap2 = "0.5.10"
rand = "0.8.5"
relative-path = "1.8.0"
ring = { version = "0.16.20", features = ["std"] }
snap = "1.1.0"
xz2 = "0.1.7"
zstd = "0.12.3"
